trunk/NewArchive/42e433a810f46e3cf4d0b86c9f4fcfd5-edbd4c7039e421af5c774e4e6fd14c2a/output
+ g++ -std=c++11 -c -Wall -Wextra -Werror -pedantic-errors main.cpp
main.cpp: In lambda function:
main.cpp:58:13: error: 'random_number_generator_actor' is not captured
             random_number_generator_actor.send(std::make_tuple(&self, 0, 10));
             ^
main.cpp:60:13: error: 'logger_actor' is not captured
             logger_actor.send(std::to_string(x));
             ^
